...
                    android:id="@+id/imgView_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imgView_height"
                    android:contentDescription="@string/thumbnail_url"
                    android:scaleType="centerCrop" />
                <TextView
                    android:id="@+id/text_view_step_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/textDesc_margin"
                    tools:text="Test" />

        </RelativeLayout>
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/button_next_step"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
...
