...

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_ingredients" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_recipe_details_list_top"
            android:layout_marginLeft="@dimen/margin_recipe_steps_list_left"

...
